--- a/admin/templates/common/module-add.twig
+++ b/admin/templates/common/module-add.twig
@@ -318,6 +318,22 @@
                   {% endif %}
                 </div>
               </div>
+            {% elseif field.type == 'checkbox' %}
+              <div class="control-group{% if field.onload == 'hide' %} hide{% endif %}" data-type="{{ key }}">
+                <label class="control-label" for="{{ key }}">{% if field.required %}<span rel="tooltip">{% endif %}{{ field.label|capitalize }}{% if field.required %}</span>{% endif %}</label>
+                <div class="controls">
+                  <input type="hidden" name="{{ module }}[type]" value="{{ module }}">
+                  {% for item, key2 in field.values %}
+                  <label class="checkbox{% if field.inline %} inline{% endif %}">
+                    <input type="checkbox" class="{{ key }} {% if field.required and loop.first %} required{% endif %}" name="{{ module }}[{{ key }}][]" value="{{ key2 }}">
+                    {{ item|capitalize }}
+                  </label>
+                  {% endfor %}
+                  {% if field.help %}
+                  <span class="help-{% if field.inline %}block{% else %}inline{% endif %}">{{ field.help|raw }}</span>
+                  {% endif %}
+                </div>
+              </div>
               {% elseif field.type == 'order' %}
               <div class="control-group">
                 <label class="control-label" for="{{ key }}">{% if field.required %}<span rel="tooltip">{% endif %}{{ field.label|capitalize }}{% if field.required %}</span>{% endif %}</label>
