--- a/admin/templates/common/module-edit.twig
+++ b/admin/templates/common/module-edit.twig
@@ -142,6 +142,9 @@
                     if ($(this).filter("textarea").length > 0) {
                       $(this).val('');
                     }
+                    if ($(this).filter(":checkbox").length > 0) {
+                      $(this).prop('checked', false);
+                    }
                   }
               });
               $(this).hide();
@@ -547,46 +550,84 @@
                       {% endif %}
                     </div>
                   </div>
-                {% elseif fkfield.type == 'radio' %}
-                  <div class="control-group{% if fkfield.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
-                    <label class="control-label" for="{{ key }}">{% if fkfield.required %}<span rel="tooltip">{% endif %}{{ fkfield.label|capitalize }}{% if fkfield.required %}</span>{% endif %}</label>
-                    <div class="controls">
-                      <input type="hidden" class="ownid" name="{{ module }}[{{ key }}][{{ index }}][id]" value="{{ fkfield.id }}">
-                      <input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][type]" value="{{ key|slice(3, 100)|lower }}">
-                      {% if session.region %}<input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][region]" value="{{ session.region }}">{% endif %}
-                      <input type="hidden" name="{{ module }}[type]" value="{{ module }}">
-                      {% for item, key2 in fkfield.values %}
-                      <label class="radio{% if fkfield.inline %} inline{% endif %}">
-                        <input type="radio" class="{{ fkkey }}{% if fkfield.required %} required{% endif %}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}]" value="{{ key2 }}"{% if key2 == fkfield.value %} checked{% endif %}{% if fkfield.readonly %} disabled{% endif %}>
-                        {{ item|capitalize }}
-                      </label>
+              {% elseif fkfield.type == 'multiselect' %}
+                <div class="control-group{% if fkfield.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
+                  <label class="control-label" for="{{ key }}">{% if fkfield.required %}<span rel="tooltip">{% endif %}{{ fkfield.label|capitalize }}{% if fkfield.required %}</span>{% endif %}</label>
+                  <div class="controls">
+                    <input type="hidden" class="ownid" name="{{ module }}[{{ key }}][{{ index }}][id]" value="{{ fkfield.id }}">
+                    <input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][type]" value="{{ key|slice(3, 100)|lower }}">
+                    {% if session.region %}<input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][region]" value="{{ session.region }}">{% endif %}
+                    <input type="hidden" name="{{ module }}[type]" value="{{ module }}">
+                    <select id="{{ key }}" class="input-xlarge select2{% if fkfield.required %} required{% endif %}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}][]" multiple="multiple">
+                      {% for item, key in fkfield.values %}
+                      <option value="{{ key }}"{% if key in fkfield.value %} selected{% endif %}>{{ item|capitalize }}</option>
                       {% endfor %}
-                      {% if fkfield.readonly %}<input type="hidden" class="{{ fkkey }}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}]" value="{{ fkfield.value }}">{% endif %}
-                      {% if fkfield.help %}
-                      <span class="help-{% if fkfield.inline %}block{% else %}inline{% endif %}"><i class="icon-info-sign help"></i> {{ fkfield.help|raw }}</span>
-                      {% endif %}
-                    </div>
+                    </select>
+                    {% if fkfield.help %}
+                    <span class="help-inline"><i class="icon-info-sign help"></i> {{ fkfield.help|raw }}</span>
+                    {% endif %}
                   </div>
-                {% elseif fkfield.type == 'foreignkey' %}
-                  <!--  -->
-                  <div class="fk well control-group{% if fkfield.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
-                    <label class="control-label" for="{{ key }}">{% if fkfield.required %}<span rel="tooltip">{% endif %}{{ fkfield.label|capitalize }}{% if fkfield.required %}</span>{% endif %}</label>
-                    <input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}][{{ fkfield.id }}][type]" value="{{ fkkey|slice(6, 100)|lower }}">
-                    <div class="controls" >
-                      <select{% if not fkfield.one %} multiple="multiple"{% endif %} name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}][{{ fkfield.id }}][id]" id="{{ key }}[{{ fkfield.id }}]" class="input-xlarge{% if fkfield.required %} required{% endif %}">
-                      {% if fkfield.one %}
-                      <option value="">-- Select --</option>
-                      {% endif %}
-                      {% for fkfield in fkfield.fields %}
-                      <option class="bigdrop" value="{{ fkfield.id }}"{% if fkfield.selected %} selected{% endif %}{% if fkfield.selectimage %} data-image="{{ fkfield.selectimage }}"{% endif %}>{{ fkfield.id }}: {{ fkfield.selecttitle }}</option>
-                      {% endfor %}
-                      </select>
-                      {% if fkfield.help %}
-                      <span class="help-inline"><i class="icon-info-sign help"></i> {{ fkfield.help|raw }}</span>
-                      {% endif %}
-                    </div>
+                </div>
+              {% elseif fkfield.type == 'radio' %}
+                <div class="control-group{% if fkfield.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
+                  <label class="control-label" for="{{ key }}">{% if fkfield.required %}<span rel="tooltip">{% endif %}{{ fkfield.label|capitalize }}{% if fkfield.required %}</span>{% endif %}</label>
+                  <div class="controls">
+                    <input type="hidden" class="ownid" name="{{ module }}[{{ key }}][{{ index }}][id]" value="{{ fkfield.id }}">
+                    <input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][type]" value="{{ key|slice(3, 100)|lower }}">
+                    {% if session.region %}<input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][region]" value="{{ session.region }}">{% endif %}
+                    <input type="hidden" name="{{ module }}[type]" value="{{ module }}">
+                    {% for item, key2 in fkfield.values %}
+                    <label class="radio{% if fkfield.inline %} inline{% endif %}">
+                      <input type="radio" class="{{ fkkey }}{% if fkfield.required %} required{% endif %}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}]" value="{{ key2 }}"{% if key2 == fkfield.value %} checked{% endif %}{% if fkfield.readonly %} disabled{% endif %}>
+                      {{ item|capitalize }}
+                    </label>
+                    {% endfor %}
+                    {% if fkfield.readonly %}<input type="hidden" class="{{ fkkey }}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}]" value="{{ fkfield.value }}">{% endif %}
+                    {% if fkfield.help %}
+                    <span class="help-{% if fkfield.inline %}block{% else %}inline{% endif %}"><i class="icon-info-sign help"></i> {{ fkfield.help|raw }}</span>
+                    {% endif %}
                   </div>
-                {% endif %}
+                </div>
+              {% elseif fkfield.type == 'checkbox' %}
+                <div class="control-group{% if fkfield.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
+                  <label class="control-label" for="{{ key }}">{% if fkfield.required %}<span rel="tooltip">{% endif %}{{ fkfield.label|capitalize }}{% if fkfield.required %}</span>{% endif %}</label>
+                  <div class="controls">
+                    <input type="hidden" class="ownid" name="{{ module }}[{{ key }}][{{ index }}][id]" value="{{ fkfield.id }}">
+                    <input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][type]" value="{{ key|slice(3, 100)|lower }}">
+                    {% if session.region %}<input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][region]" value="{{ session.region }}">{% endif %}
+                    <input type="hidden" name="{{ module }}[type]" value="{{ module }}">
+                    {% for item, key2 in fkfield.values %}
+                    <label class="checkbox{% if fkfield.inline %} inline{% endif %}">
+                      <input type="checkbox" class="{{ fkkey }}{% if fkfield.required %} required{% endif %}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}][]" value="{{ key2 }}"{% if key2 in fkfield.value and fkfield.value is not null %} checked{% endif %}{% if fkfield.readonly %} disabled{% endif %}>
+                      {{ item|capitalize }}
+                    </label>
+                    {% endfor %}
+                    {% if fkfield.readonly %}<input type="hidden" class="{{ fkkey }}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}]" value="{{ fkfield.value }}">{% endif %}
+                    {% if fkfield.help %}
+                    <span class="help-{% if fkfield.inline %}block{% else %}inline{% endif %}"><i class="icon-info-sign help"></i> {{ fkfield.help|raw }}</span>
+                    {% endif %}
+                  </div>
+                </div>
+              {% elseif fkfield.type == 'foreignkey' %}
+                <!--  -->
+                <div class="fk well control-group{% if fkfield.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
+                  <label class="control-label" for="{{ key }}">{% if fkfield.required %}<span rel="tooltip">{% endif %}{{ fkfield.label|capitalize }}{% if fkfield.required %}</span>{% endif %}</label>
+                  <input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}][{{ fkfield.id }}][type]" value="{{ fkkey|slice(6, 100)|lower }}">
+                  <div class="controls" >
+                    <select{% if not fkfield.one %} multiple="multiple"{% endif %} name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}][{{ fkfield.id }}][id]" id="{{ key }}[{{ fkfield.id }}]" class="input-xlarge{% if fkfield.required %} required{% endif %}">
+                    {% if fkfield.one %}
+                    <option value="">-- Select --</option>
+                    {% endif %}
+                    {% for fkfield in fkfield.fields %}
+                    <option class="bigdrop" value="{{ fkfield.id }}"{% if fkfield.selected %} selected{% endif %}{% if fkfield.selectimage %} data-image="{{ fkfield.selectimage }}"{% endif %}>{{ fkfield.id }}: {{ fkfield.selecttitle }}</option>
+                    {% endfor %}
+                    </select>
+                    {% if fkfield.help %}
+                    <span class="help-inline"><i class="icon-info-sign help"></i> {{ fkfield.help|raw }}</span>
+                    {% endif %}
+                  </div>
+                </div>
+              {% endif %}
 
               {% endfor %}
               <hr>
@@ -678,6 +719,25 @@
                     {% for item, key2 in fkfield.values %}
                     <label class="radio{% if fkfield.inline %} inline{% endif %}">
                       <input type="radio" class="{{ fkkey }}{% if fkfield.required %} required{% endif %}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}]" value="{{ key2 }}"{% if fkfield.readonly %} disabled{% endif %}>
+                      {{ item|capitalize }}
+                    </label>
+                    {% endfor %}
+                    {% if fkfield.readonly %}<input type="hidden" class="{{ fkkey }}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}]" value="{{ fkfield.value }}">{% endif %}
+                    {% if fkfield.help %}
+                    <span class="help-{% if fkfield.inline %}block{% else %}inline{% endif %}"><i class="icon-info-sign help"></i> {{ fkfield.help|raw }}</span>
+                    {% endif %}
+                  </div>
+                </div>
+              {% elseif fkfield.type == 'checkbox' %}
+                <div class="control-group{% if fkfield.onload == 'hide' %} hide{% endif %}" data-type="{{ fkkey }}">
+                  <label class="control-label" for="{{ key }}">{% if fkfield.required %}<span rel="tooltip">{% endif %}{{ fkfield.label|capitalize }}{% if fkfield.required %}</span>{% endif %}</label>
+                  <div class="controls">
+                    <input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][type]" value="{{ key|slice(3, 100)|lower }}">
+                    {% if session.region %}<input type="hidden" name="{{ module }}[{{ key }}][{{ index }}][region]" value="{{ session.region }}">{% endif %}
+                    <input type="hidden" name="{{ module }}[type]" value="{{ module }}">
+                    {% for item, key2 in fkfield.values %}
+                    <label class="checkbox{% if fkfield.inline %} inline{% endif %}">
+                      <input type="checkbox" class="{{ fkkey }}{% if fkfield.required %} required{% endif %}" name="{{ module }}[{{ key }}][{{ index }}][{{ fkkey }}][]" value="{{ key2 }}" {% if fkfield.readonly %} disabled{% endif %}>
                       {{ item|capitalize }}
                     </label>
                     {% endfor %}
