Added jQuery validate additional-methods.js to verify field parameter

--- a/admin/templates/common/header.twig
+++ b/admin/templates/common/header.twig
@@ -30,6 +30,7 @@
     <script src="/admin/js/bootstrap-datepicker.js"></script>
     <script src="/admin/js/bootstrap-colorpicker.js"></script>
     <script src="/admin/js/jquery.validate.js"></script>
+    <script src="/admin/js/additional-methods.js"></script>
     <script src="/admin/libs/dataTables/js/jquery.dataTables.min.js"></script>
     <script src="/admin/js/select2.min.js"></script>
     <script src="/admin/libs/tinymce/jscripts/tiny_mce/jquery.tinymce.js"></script>
