--- a/admin/templates/common/footer.twig
+++ b/admin/templates/common/footer.twig
@@ -21,7 +21,7 @@
 
       <footer>
         <p class="pull-right"><a href="#top"><i class="icon-arrow-up"></i></a></p>
-        <p>&copy; {{ cms.name }} {{ "now"|date("Y") }} | <a href="#" class="credits">Credits</a></p>
+        <p>&copy; {{ cms.name }} {{ "now"|date("Y") }} | <a href="#" class="credits">Credits</a> | <a href="http://chuck.studiomohu.com/" target="_blank">Docs</a></p>
       </footer>
 
       <div class="modal fade hide" id="credits">
