--- a/admin/templates/common/header.twig
+++ b/admin/templates/common/header.twig
@@ -11,7 +11,7 @@
     <link href="/admin/css/bootstrap.min.css" rel="stylesheet">
     <link href="/admin/css/admin-style.css" rel="stylesheet">
 
-    <link href="/admin/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/admin/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="/admin/css/datepicker.css" rel="stylesheet">
     <link href="/admin/css/colorpicker.css" rel="stylesheet">
     <link href="/admin/css/select2.css" rel="stylesheet">
