--- a/admin/templates/common/nav.twig
+++ b/admin/templates/common/nav.twig
@@ -15,7 +15,7 @@
 
             <ul class="nav pull-right">
               <li><a href="/" target="_blank">Preview <i class="icon-globe icon-white"></i></a></li>
-              <li class="dropdown" id="menu1">
+              <li class="dropdown{% if module == "systeminfo" %} active{% endif %}" id="menu1">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#" id="#menu1">Tools <b class="caret"></b></a>
                 <ul class="dropdown-menu">
                   <li class="clear-cache"><a href="#"><span class="badge pull-right">{{ cache.status }}</span><i class="icon-trash"></i> Clear cache</a></li>
