--- a/admin/css/admin-style.styl
+++ b/admin/css/admin-style.styl
@@ -20,7 +20,7 @@ body
   &.debug
     background-color #D9EDF7
 
-.accordion-heading i
+.accordion-heading li i
   color #585858
   margin 3px 0 0 0
   opacity(0.80)
@@ -28,6 +28,8 @@ body
 
 .accordion-inner i
   color #585858
+.accordion-inner li.active i
+  color #ffffff
 
 .nav-list > li > a
   padding-left 5px
