--- a/admin/templates/common/public-header.twig
+++ b/admin/templates/common/public-header.twig
@@ -8,14 +8,14 @@
     <meta name="author" content="">
 
     <!-- Styles -->
-    <link href="/admin/css/bootstrap.css" rel="stylesheet">
+    <link href="/admin/css/bootstrap.min.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
         padding-bottom: 40px;
       }
     </style>
-    <link href="/admin/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/admin/css/bootstrap-responsive.min.css" rel="stylesheet">
 
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
