--- a/admin/css/admin-style.styl
+++ b/admin/css/admin-style.styl
@@ -20,7 +20,7 @@ body
   &.debug
     background-color #D9EDF7
 
-.accordion-heading li i
+.accordion-heading i
   color #585858
   margin 3px 0 0 0
   opacity(0.80)
